==> wirepas/wm-sdk-2_4/mcu/nrf/nrf54/hal/usart_dma.c <==
#include <stdint.h>
#include <stdbool.h>
#include "board.h"
#include "hal_api.h"
#include "api.h"
#include "usart_dma_series.h"
#include "doublebuffer.h"
#define HAL_USART_DMA_TIMEOUT_CHAR_N    5U
#define HAL_USART_DMA_FRAMETIMEOUT_N    (10U * HAL_USART_DMA_TIMEOUT_CHAR_N)
#define HAL_USART_DMA_RX_BUFFER_SIZE (256U)

bool Usart_init(uint32_t baudrate, uart_flow_control_e flow_control)
{
    (void)flow_control;
    bool ret;

    /* Module variables */
    m_enabled     = 0;
    m_rx_enabled  = false;
    m_rx_callback = NULL;

    NRF_UARTE0->ENABLE = UARTE_ENABLE_ENABLE_Disabled;

    /* GPIO init */
    nrf_gpio_cfg_default(BOARD_USART_TX_PIN);
    nrf_gpio_pin_set(BOARD_USART_TX_PIN);
    nrf_gpio_cfg_default(BOARD_USART_RX_PIN);
    nrf_gpio_pin_set(BOARD_USART_RX_PIN);

    NRF_UARTE0->PSEL.TXD    = BOARD_USART_TX_PIN;
    NRF_UARTE0->PSEL.RXD    = BOARD_USART_RX_PIN;
    NRF_UARTE0_TASKS_STOPTX = 1;
    NRF_UARTE0_TASKS_STOPRX = 1;

    NRF_UARTE0->CONFIG = NRF_UARTE0_CONFIG_DEFAULT;
    NRF_UARTE0->FRAMETIMEOUT = HAL_USART_DMA_FRAMETIMEOUT_N;
    NRF_UARTE0->SHORTS = NRF_UARTE0_SHORTS;

#if defined(BOARD_USART_CTS_PIN) && defined(BOARD_USART_RTS_PIN)
    nrf_gpio_cfg_default(BOARD_USART_CTS_PIN);
    nrf_gpio_pin_set(BOARD_USART_CTS_PIN);
    nrf_gpio_cfg_default(BOARD_USART_RTS_PIN);
    nrf_gpio_pin_set(BOARD_USART_RTS_PIN);
    /* Set flow control */
    set_flow_control(flow_control == UART_FLOW_CONTROL_HW);
#endif  // defined(BOARD_USART_CTS_PIN) && defined(BOARD_USART_RTS_PIN)

    /* Uart speed */
    ret = set_baud(baudrate);
    /* Even if ret is False, do the end of init to have a uart at default
     * baudrate */

    /* Initialize DMA part*/
    init_dma(baudrate);

    /* APP IRQ */
    Sys_clearFastAppIrq(UART0_IRQn);
    Sys_enableFastAppIrq(UART0_IRQn,
                         APP_LIB_SYSTEM_IRQ_PRIO_HI,
                         UARTE0_IRQHandler);

    return ret;
}

void Usart_setEnabled(bool enabled)
{
    Sys_enterCriticalSection();
    if (enabled)
    {
        if (m_enabled == 0)
        {
            // Disable deep sleep
            DS_Disable(DS_SOURCE_USART);
            // Set output
            nrf_gpio_cfg(BOARD_USART_TX_PIN,
                         NRF_GPIO_PIN_DIR_OUTPUT,
                         NRF_GPIO_PIN_INPUT_CONNECT,
                         NRF_GPIO_PIN_NOPULL,
                         NRF_GPIO_PIN_S0S1,
                         NRF_GPIO_PIN_NOSENSE);

            NRF_UARTE0->ENABLE = UARTE_ENABLE_ENABLE_Enabled;
        }

        m_enabled++;
    }
    else
    {
        if (m_enabled > 0)
        {
            m_enabled--;
        }

        if (m_enabled == 0)
        {
            NRF_UARTE0->ENABLE = UARTE_ENABLE_ENABLE_Disabled;
            // Set input
            nrf_gpio_cfg_input(BOARD_USART_TX_PIN, NRF_GPIO_PIN_NOPULL);
            // Enable deep sleep
            DS_Enable(DS_SOURCE_USART);
        }
    }

    Sys_exitCriticalSection();
}

void Usart_receiverOn(void)
{
    Sys_enterCriticalSection();
    if (m_rx_enabled)
    {
        // Already enabled
        Sys_exitCriticalSection();
        return;
    }

    m_rx_enabled       = true;

    // Clear events
    NRF_UARTE0->EVENTS_RXDRDY   = 0;
    NRF_UARTE0_EVENTS_ENDRX     = 0;
    NRF_UARTE0_EVENTS_RXSTARTED = 0;

    // Prepare RX buffer
    NRF_UARTE0_RX_PTR    = (uint32_t) m_rx_buffer_1;
    NRF_UARTE0_RX_MAXCNT = HAL_USART_DMA_RX_BUFFER_SIZE;
    m_active_rx_buffer   = m_rx_buffer_1;

    // Start uart reception
    NRF_UARTE0_TASKS_STARTRX = 1;
    Sys_exitCriticalSection();
}

void Usart_receiverOff(void)
{
    Sys_enterCriticalSection();

    // Stop uart reception
    NRF_UARTE0_TASKS_STOPRX = 1;

    m_rx_enabled = false;
    Sys_exitCriticalSection();
}

void Usart_enableReceiver(serial_rx_callback_f rx_callback)
{
    Sys_enterCriticalSection();
    /* Set callback */
    m_rx_callback = rx_callback;
    if (m_rx_callback)
    {
        // Enable RX input
        nrf_gpio_cfg(BOARD_USART_RX_PIN,
                     NRF_GPIO_PIN_DIR_INPUT,
                     NRF_GPIO_PIN_INPUT_CONNECT,
                     NRF_GPIO_PIN_NOPULL,
                     NRF_GPIO_PIN_S0S1,
                     NRF_GPIO_PIN_SENSE_LOW);
    }
    else
    {
        // Disable RX input: note autopowering uart will not work either
        nrf_gpio_cfg_default(BOARD_USART_RX_PIN);
    }
    Sys_exitCriticalSection();
}
